Calculate 4 week program.
Removed all dependencies. No longer a jQuery plugin, just
a function.

--- a/tests/index.html
+++ b/tests/index.html
@@ -13,8 +13,7 @@
     </form>
   </div>
 
-  <script src="../jquery.js"></script>
-  <script src="../jquery.wendler.js"></script>
+  <script src="../calculate-wendler.js"></script>
   <script src="qunit-2.0.1.js"></script>
   <script src="tests.js"></script>
 </body>
