feat: Add basic markup

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 
     <main>
 
-      <input id='weight-input' type='number' />
-      <button id='output-trigger'>Do it</button>
+      <section class='input'>
+        <label for='weight-input'>One rep max:</label>
+        <input id='weight-input' name='weight-input' type='number' />
+        <button id='output-trigger'>Do it</button>
+      </section>
 
-      <section id='plan'>
+      <section class='display' id='plan'>
         <!-- Plan outputs here -->
       </section>
 
